--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
     <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/favicon.png" />
 
+    <link href="http://fonts.cdnfonts.com/css/rawline" rel="stylesheet">
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
