--- a/public/final/index.html
+++ b/public/final/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/01-12-2023 v6.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/22-12-2023 [SEM TRANSPARENCIA].json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
