--- a/public/final/index.html
+++ b/public/final/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/06-03-2024 [SEM TRANSPARENCIA].json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/20-06-2024.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
